# murmur

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/murmur-cli/: Cargo.toml
crates/murmur-cli/src/: main.rs  offline.rs
crates/murmur-dag/: Cargo.toml
crates/murmur-dag/src/: entry.rs  error.rs  lib.rs  state.rs
crates/murmur-desktop/: Cargo.toml
crates/murmur-desktop/packaging/linux/: murmur-desktop.desktop
crates/murmur-desktop/src/: app.rs  ipc.rs  main.rs  message.rs  storage.rs  update.rs
crates/murmur-desktop/src/views/: conflicts.rs  devices.rs  folders.rs  mod.rs  settings.rs
crates/murmur-engine/: Cargo.toml
crates/murmur-engine/src/: callbacks.rs  engine.rs  error.rs  event.rs  lib.rs
crates/murmur-ffi/: Cargo.toml  README.md  build.rs
crates/murmur-ffi/src/: lib.rs  networking.rs
crates/murmur-ipc/: Cargo.toml
crates/murmur-ipc/src/: lib.rs  templates.rs
crates/murmur-net/: Cargo.toml
crates/murmur-net/src/: error.rs  lib.rs  message.rs  transport.rs  wire.rs
crates/murmur-seed/: Cargo.toml
crates/murmur-seed/src/: lib.rs  pairing.rs
crates/murmur-types/src/: lib.rs
crates/murmurd/: Cargo.toml
crates/murmurd/src/: config.rs  main.rs  networking.rs  storage.rs  sync.rs
crates/murmurd/tests/: shutdown.rs
docs/: architecture.md  features.md  local.md  manual-testing.md  plan-later.md  plan.md  share-feature.md
scripts/: run-cli-tests.sh
tests/integration/: Cargo.toml  conflict_resolution.rs  file_operations.rs  folder_management.rs  helpers.rs  pairing.rs  scenarios.rs  three_device_topology.rs  two_device_sync.rs
tests/manual/: app-desktop-advanced.md  app-desktop-basic.md  app-desktop-intermediate.md  app-desktop-to-desktop.md  cli-advanced.md  cli-basic.md  cli-intermediate.md
