[package]
name = "murmur-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "murmur-cli"
path = "src/main.rs"

[dependencies]
murmur-ipc = { path = "../murmur-ipc" }
murmur-seed = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
