[package]
name = "murmur-desktop"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-ipc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
iced = { version = "0.14", features = ["tokio"] }
