[package]
name = "murmur-net"
version.workspace = true
edition.workspace = true

[dependencies]
murmur-types = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
bytes = { workspace = true }
futures-lite = { workspace = true }
flate2 = { workspace = true }
